# bluerov2

./: .gitignore  .gitmodules  README.md  bridge.bag.active  circle.bag  mpc_helical.bag  record.sh  record_dr.sh  record_pid.sh  record_systemID.sh  sta_sup2_c.bag  sta_sup2_nc.bag  sta_sup2_pid.bag  sta_sup_nc.bag
bluerov2_control/: CMakeLists.txt  package.xml
bluerov2_control/action/: FollowWaypoints.action
bluerov2_control/cfg/: marker_reconfig.cfg  pid_reconfig.cfg
bluerov2_control/config/: TAM.yaml  inertial.yaml  thruster_manager.yaml
bluerov2_control/config/teleop/: f310_command_mappings.yaml  f710_mappings.yaml  key_joy_command_mappings.yaml  switchpro_command_mappings.yaml
bluerov2_control/launch/: bluerov_node.launch  joystick_teleop.launch  keyboard_teleop.launch  los_controller.launch  pid.launch  position_hold.launch  record.launch  rov_pid_controller.launch  rov_sitl.launch  set_gm_current.launch  start_ardusub_sitl.launch  start_pid_controller.launch  start_thruster_manager.launch  switch_pro_teleop.launch  video.launch
bluerov2_control/msg/: Autopilot.msg  ControlMode.msg
bluerov2_control/rviz/: bluerov2_control.rviz
bluerov2_control/scripts/: geodetic_to_local.py  import_iver_mis.py  keyboard_joy.py  mavactive.py  mavlink_bridge.py  mavros_interface.py  rc_override_example.py  set_gm_current.py  simple_los.py  sitl_model_state_publisher.py  sitl_teleop_manual_control.py  sitl_teleop_rc_override.py  trajectory_visualizer.py  utm_to_world.py  vel_publisher.py  waypoint.py
bluerov2_control/src/bluerov/: pubs.py  (+4 more)
bluerov2_control/srv/: ConvertGeoPoints.srv  SetControlMode.srv
bluerov2_control/waypoints/: example_waypoints.yaml
bluerov2_dobmpc/: CMakeLists.txt  package.xml
bluerov2_dobmpc/config/: ctrl.yaml  forcex.txt  forcey.txt  forcez.txt  gazebo_param.yaml  gazebo_param_copy.yaml  gazebo_param_pool.yaml  gazebo_param_pool_side.yaml  gazebo_param_ship.yaml  thruster_manager.yaml  torquez.txt
bluerov2_dobmpc/include/: bluerov2_dobmpc.h  bluerov2_interface.h
bluerov2_dobmpc/launch/: ahrs.launch  ampc.launch  ctrl.launch  do.launch  dob.launch  dob_copy.launch  dob_patty.launch  dob_pool.launch  dob_pool_side.launch  dob_ship.launch  dobmpc.launch  environ.launch  pcl.launch  random.launch  start_ampc_demo.launch  start_bridge_demo.launch  start_dobmpc_demo.launch  start_dobmpc_demo_patty.launch  start_dobmpc_demo_pool.launch  start_dobmpc_demo_pool_side.launch  start_dobmpc_demo_ship.launch  start_random_demo.launch
bluerov2_dobmpc/msg/: Pose.msg  Reference.msg
bluerov2_dobmpc/scripts/: acados_ocp.json  ahrs.py  ahrs_publisher.py  bag2csv.py  bluerov2.py  data_points.csv  dead_reckoning.py  discrete_model.py  dr_fusion_rov.py  dvl_noise.py  ekf_rov.py  fgo_ceres_rov.py  fgo_least_rov.py  fitting.py  fitting_gen.py  generate_c_code.py  kf_rov.py  plotID.py  position_show.py  process_noise_covariances.py  record_random.sh  sensor_fusion_rov.py  ukf_rov.py  ukf_rov_v2.py
bluerov2_dobmpc/src/: bluerov2_ampc.cpp  bluerov2_ampc_node.cpp  bluerov2_ctrl.cpp  bluerov2_ctrl_node.cpp  bluerov2_do.cpp  bluerov2_do_node.cpp  bluerov2_dob.cpp  bluerov2_dob_ctrl.cpp  bluerov2_dob_ctrl_node.cpp  bluerov2_dob_node.cpp  bluerov2_dob_patty.cpp  bluerov2_dobmpc.cpp  bluerov2_dobmpc_node.cpp  bluerov2_inspection_node.cpp  bluerov2_interface.cpp  bluerov2_random_node.cpp  imu_do.cpp  realsensed435_pcl_node.cpp
bluerov2_exp/: CMakeLists.txt  package.xml
bluerov2_exp/launch/: apm.launch
bluerov2_exp/misc/: attach_cont.sh  docker_run.md  firmware.md  lala_mavros.sh  start_cont.sh  usage.md
bluerov2_exp/scripts/: mavlink_test.py
bluerov2_exp/src/: offb.cpp
bluerov2_gazebo/: CMakeLists.txt  package.xml
bluerov2_gazebo/config/: gm_current.yaml
bluerov2_gazebo/launch/: ardusub_peberholm_world.launch  bridge_demo.launch  herkules_ship_wreck.launch  peberholm_bluerov2.launch  peberholm_world.launch  quick_start.launch  record_demo.launch  start_accel_controller_demo.launch  start_ardusub_sitl_demo.launch  start_body_wrench.launch  start_disturbance_demo.launch  start_mpc_demo.launch  start_pid_controller_demo.launch  start_pid_demo.launch  start_pid_demo_with_teleop.launch  start_pid_with_current.launch  start_trajectory_controller_demo.launch  start_with_thruster_manager.launch
bluerov2_gazebo/rviz/: bluerov2_gazebo.rviz
bluerov2_gazebo/worlds/: ardusub-peberholm.world  peberholm.world
bluerov2_implement/: CMakeLists.txt  package.xml
bluerov2_implement/launch/: ahrs.launch
bluerov2_implement/scripts/: ahrs_publisher.py
bluerov2_mpc/: CMakeLists.txt  package.xml
bluerov2_mpc/launch/: bridge_path.launch  circle.launch  helical.launch  lemniscate.launch  points.launch  px4_gazebo.launch  rov_mpc_controller.launch  stationary.launch  yaw.launch
bluerov2_mpc/scripts/: acados_ocp.json  acados_sim.json  bluerov2.py  generate_c_code.py  plot.py  plot2d.py  rov_mpc_controller.py
bluerov2_mpc/src/: bluerov2_mpc_node.cpp
bluerov2_mpc/traj/: bridge_path.py  bridge_path.txt  bridge_vision.py  circle.py  circle.txt  forward.py  forward.txt  helical.py  helical.txt  lemniscate.py  lemniscate.txt  points.py  points.txt  slam_circle.py  slam_circle.txt  slam_circle_pool.txt  slam_pool.py  slam_pool_eight.py  slam_pool_eight_v2.txt  slam_pool_mix.py  slam_pool_mix.txt  slam_pool_shrinktrian.txt  slam_pool_side.py  slam_pool_spiral.py  stationary.py  stationary.txt  step.py  systemID.py  systemID.txt  yaw.py
bluerov2_path/: CMakeLists.txt  package.xml
bluerov2_path/config/: gazebo_param.yaml
bluerov2_path/launch/: path.launch  wrench.launch
bluerov2_path/src/: bluerov2_path.cpp  bluerov2_path_node.cpp  bluerov2_wrench.cpp
bluerov2_states/: CMakeLists.txt  package.xml
bluerov2_states/include/: ImuDo.h  essential.h
bluerov2_states/launch/: data_log.launch  imu_calibrate.launch  state.launch
bluerov2_states/plugins/: nodelets.xml
bluerov2_states/scripts/: angle_xi.py  ctrl.py  error.py  mpc_plot.py  mpc_plot2.py  plot.py  pos.py
bluerov2_states/src/: Config.cpp  Dynamics.cpp  Eskf.cpp  ImuCalibrate.cpp  ImuDo.cpp  dataCollect.cpp
(+169 files in other folders)
