<?xml version="1.0"?>
<package format="2">
  <name>bluerov2_control</name>
  <version>0.0.0</version>
  <description>The bluerov2_control package</description>

  <maintainer email="frederico@my.ingeniarius.pt">Ingeniarius</maintainer>
  <author email="frederico.vaz@isr.uc.pt">ISR-UC</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>uuv_control_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>geodesy</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>uuv_control_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>uuv_control_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
