<?xml version="1.0"?>
<package>
  <name>bluerov2_gazebo</name>
  <version>0.0.0</version>
  <description>Package with launch files for demonstrations with the BlueROV 2 vehicle</description>

  <maintainer email="frederico@my.ingeniarius.pt">Ingeniarius</maintainer>
  <author email="frederico.vaz@isr.uc.pt">ISR-UC</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>bluerov2_description</run_depend>
  <run_depend>bluerov2_control</run_depend>

</package>
